[package]
name = "option-like"
version = "0.1.0"
edition = "2021"
description = "Create your own Option-like enum"
homepage = "https://github.com/DenisGorbachev/option-like"
repository = "https://github.com/DenisGorbachev/option-like"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "Create your own Option-like enum"
tagline = ""
summary = ""
announcement = ""
readme = {}
